<resources>
    <string name="app_name">BearWithMe</string>
    <string name="brown_bear_activity_label">Brown Bear of Fortune</string>
    <string name="black_bear_activity_label">Black Bear of Fortune</string>
    <string name="brown_bear_button_text">Brown Bear</string>
    <string name="black_bear_button_text">Black Bear</string>
    <string name="welcome_message">Pick your bear!</string>
    <string name="question">What is your question human?</string>
    <string name="predict_button_text">Predict bear!</string>
    <string name="food_message">Please feed the bear</string>
    <string name="prediction_activity_label">Wise bear words..</string>
    <string name="say_donut_text"> you fed the bear a donut!</string>
    <string name="say_cheeseburger_text"> you fed the bear a cheeseburger!</string>
    <string name="say_beer_text"> you fed the bear beer!</string>
    <string name="say_cheese_text"> you fed the bear cheese!</string>
    <string name="say_grapes_text"> you fed the bear grapes!</string>
    <string name="say_cocktail_text"> you fed the bear a cocktail!</string>

</resources>
