<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:background="@drawable/bear_home_page">


    <Button
        android:id="@+id/brownBear"
        android:text="@string/brown_bear_button_text"
        android:textSize="15dp"
        android:textColor="#ffffff"
        android:background="#690000"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_alignBaseline="@+id/blackBear"
        android:layout_alignBottom="@+id/blackBear"
        android:layout_toRightOf="@+id/blackBear"
        android:layout_toEndOf="@+id/blackBear" />

    <Button
        android:id="@+id/blackBear"
        android:text="@string/black_bear_button_text"
        android:textSize="15dp"
        android:textColor="#ffffff"
        android:background="#690000"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="68dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="22dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/welcome_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:textColor="#302626"
        android:textAlignment="center"
        android:id="@+id/textView"
        android:layout_above="@+id/brownBear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp" />


</RelativeLayout>