<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/question_text"
        android:hint="@string/question"
        android:textSize="25dp"
        android:layout_marginTop="31dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/predict"
        android:text="@string/predict_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/question_text"
        android:layout_centerHorizontal="true" />


    <ImageButton
        android:id="@+id/beer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_beer"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/donut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_donut"
        android:layout_alignTop="@+id/beer"
        android:layout_toLeftOf="@+id/predict"
        android:layout_toStartOf="@+id/predict" />

    <TextView
        android:text="@string/food_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:id="@+id/textView2"
        android:layout_marginBottom="14dp"
        android:layout_above="@+id/beer"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/cheeseburger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_burger"
        android:layout_alignTop="@+id/beer"
        android:layout_toRightOf="@+id/predict"
        android:layout_toEndOf="@+id/predict" />

</RelativeLayout>